added rediscache service

--- a/GlobalBilgiQuiz.MVC/appsettings.json
+++ b/GlobalBilgiQuiz.MVC/appsettings.json
@@ -8,6 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Prod": "Server=.....;DATABASE=.....;User Id=.....;Password=.....;",
-    "Dev": "Server=DESKTOP-JFL64NO\\SQLEXPRESS;Database=GlobalBilgiQuizDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "Dev": "Data Source=DESKTOP-F0UJHT2;Initial Catalog=GlobalBilgiQuiz;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "RedisSettings": {
+    "Host": "localhost",
+    "Port": 6379
   }
+
 }
