--- a/GlobalBilgiQuiz.Database/GlobalBilgiQuiz.Database.csproj
+++ b/GlobalBilgiQuiz.Database/GlobalBilgiQuiz.Database.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
+
   </PropertyGroup>
 
   <ItemGroup>
