--- a/GlobalBilgiQuiz.MVC/appsettings.json
+++ b/GlobalBilgiQuiz.MVC/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Prod": "Server=.....;DATABASE=.....;User Id=.....;Password=.....;",
-    "Dev": "Server=DESKTOP-JFL64NO\\SQLEXPRESS;Database=GlobalBilgiQuizDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "Dev": "Server=(localdb)\\MSSQLLocalDB;Database=GlobalBilgiQuizDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "RedisConnection": "localhost:6379"
   }
 }
