--- a/GlobalBilgiQuiz.Business/GlobalBilgiQuiz.Business.csproj
+++ b/GlobalBilgiQuiz.Business/GlobalBilgiQuiz.Business.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.96" />
   </ItemGroup>
 
   <ItemGroup>
