[oguzhan]-coed refactor and bug fixes

--- a/GlobalBilgiQuiz.MVC/appsettings.json
+++ b/GlobalBilgiQuiz.MVC/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Prod": "Server=.....;DATABASE=.....;User Id=.....;Password=.....;",
-    "Dev": "Data Source=DESKTOP-F0UJHT2;Initial Catalog=GlobalBilgiQuiz;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Dev": "Server=DESKTOP-JFL64NO\\SQLEXPRESS;Database=GlobalBilgiQuizDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "RedisSettings": {
     "Host": "localhost",
